Fixed text overlap by modifying actions-copy, action-head, and h3 classes
git-svn-id: https://svn.otpartners.com/svn/Poses/trunk@1357 7f4e098a-8ec1-c442-913e-02cc3c41ae5c

--- a/UnderstoodDotOrg.Web/Presentation/Includes/css/article.css
+++ b/UnderstoodDotOrg.Web/Presentation/Includes/css/article.css
@@ -2429,7 +2429,7 @@
   font-size: 1.5rem;
   font-weight: normal;
   color: #7a4183;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 /* line 21, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
 .article-actions-copy p {
@@ -2489,7 +2489,7 @@
 .article-actions-copy .action-head {
   padding-top: 15px;
   vertical-align: center;
-  min-height: 64px;
+  min-height: 32px;
 }
 /* line 67, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
 .article-actions-copy .action-head h3 {
@@ -2511,18 +2511,20 @@
   /* line 63, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
   .article-actions-copy .action-head {
     margin-left: 40px;
-    padding-top: 0;
+    padding-top: 10px;
   }
 }
 /* line 83, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
 .article-actions-copy .action-copy {
   float: none;
   display: block;
+
+
 }
 @media (min-width: 650px) {
   /* line 83, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
   .article-actions-copy .action-copy {
-    margin-top: -32px;
+   
     margin-left: 40px;
     padding: 0 0 0 116px;
   }
@@ -2530,7 +2532,7 @@
 @media (min-width: 769px) {
   /* line 83, /Users/justin/projects.dp/poses/source/Presentation/includes/css/modules/article/_article-actions-copy.scss */
   .article-actions-copy .action-copy {
-    margin-top: -50px;
+   
   }
 }
 
